Fix overflow

--- a/src/components/visualizer/index.css
+++ b/src/components/visualizer/index.css
@@ -1,6 +1,8 @@
 .camellia-visualzer {
+    position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .camellia-visualzer .inputs {
